--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- boton de inicio -->
 
-<a href="index.html" class="home">Home</a>
+<a href="\index.html" class="home">Home</a>
 
 <!-- boton de about -->
 <a href="Conoceme.html" class="About">Ozhelli Diaz</a>
