Update La enfermedad mas contagiosa.html

--- a/La enfermedad mas contagiosa.html
+++ b/La enfermedad mas contagiosa.html
@@ -79,7 +79,7 @@
 						LUIS OZHELLI DIAZ TAVARES
 					</h2>
 					<h2 class="FECHA"> 
-						Monterrey, NL a viernes 29 de Enero 2021
+						Monterrey, NL a Miercoles 19 de Marzo 2021
 					</h2>
 					
 				</section>
