--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
      <h3 class="tituloAE">"La enfermedad mas contagiosa de mexico"</h3>
      <!-- Seccion "Recomendados del dia" -->
      <p class="Rd"> Recomendados del dia</p>
+	<p class="Dc"> Como ya entramos en el mes de octubre y cada vez mas se acerca la fecha de Halloween , les tengo algunas canciones y peliculas para sus fiestas y noches de Octubre.
+		Las canciones las estaré actualizando diariamente y las peliculas quedaran en una lista debajo de las canciones. </p>
       <!-- Primer cuadro "Recomendados del dia" -->
-   <iframe class="C1" width="200" height="200" src="https://www.youtube.com/embed/SlavNfu3NoU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe class="C1" width="200" height="200" src="https://www.youtube.com/watch?v=1uYWYWPc9HU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="Desc1">
-    Un buen mix "electro"
+    Karma Police - Radiohead
     </p>
     <!-- Segundo cuadro "Recomendados del dia" -->
-    <iframe class="C2" width="250" height="200" src="https://www.youtube.com/embed/zFT3f9biz68" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="C2" width="250" height="200" src="https://www.youtube.com/watch?v=QBK6xymmKHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="Desc2">
-    La banda coreana del momento
+    Corey Taylor - Snuff
      </p>
   
 
