--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 	<p class="Dc"> Como ya entramos en el mes de octubre y cada vez mas se acerca la fecha de Halloween , les tengo algunas canciones y peliculas para sus fiestas y noches de Octubre.
 		Las canciones las estaré actualizando diariamente y las peliculas quedaran en una lista debajo de las canciones. </p>
       <!-- Primer cuadro "Recomendados del dia" -->
-   <iframe class="C1" width="200" height="200" src="https://www.youtube.com/watch?v=1uYWYWPc9HU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe class="C1" width="200" height="200" src="https://www.youtube.com/embed/watch?v=1uYWYWPc9HU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="Desc1">
     Karma Police - Radiohead
     </p>
     <!-- Segundo cuadro "Recomendados del dia" -->
-    <iframe class="C2" width="250" height="200" src="https://www.youtube.com/watch?v=QBK6xymmKHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="C2" width="250" height="200" src="https://www.youtube.com/embed/watch?v=QBK6xymmKHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="Desc2">
     Corey Taylor - Snuff
      </p>
